--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -717,17 +717,17 @@ body {
 .pr-validation-error,
 .pr-validation-error:focus {
   border-color: #C70000;
-  box-shadow: 0 2px 5px 0 rgba(255, 0, 0, 0.5), 0 2px 10px 0 rgba(255, 0, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(255, 0, 0, 0.75), 0 2px 10px 0 rgba(255, 0, 0, 0.12);
 }
 .pr-validation-warning,
 .pr-validation-warning:focus {
   border-color: #ffff00;
-  box-shadow: 0 2px 5px 0 rgba(150, 150, 0, 0.5), 0 2px 10px 0 rgba(150, 150, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(150, 150, 0, 0.75), 0 2px 10px 0 rgba(150, 150, 0, 0.12);
 }
 .pr-validation-notice,
 .pr-validation-notice:focus {
   border-color: #C70000;
-  box-shadow: 0 2px 5px 0 rgba(0, 255, 0, 0.5), 0 2px 10px 0 rgba(0, 255, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(0, 255, 0, 0.75), 0 2px 10px 0 rgba(0, 255, 0, 0.12);
 }
 .error-input {
   color: #CA2027;
@@ -1427,5 +1427,29 @@ body {
 }
 .controller-portal-edit button.form-control {
   width: 10em;
+}
+.dimmed {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: #fff;
+  opacity: 0.4;
+  z-index: 1001;
+  width: 100%;
+  height: 100%;
+}
+.dimmed-message {
+  position: absolute;
+  top: 30%;
+  left: 0px;
+  width: 100%;
+  height: auto;
+  text-align: center;
+  font-size: 24px;
+  color: black;
+  opacity: 1;
+  z-index: 1002;
 }
 /*# sourceMappingURL=style.css.map */
