--- a/profapp/templates/_ruslan/partials/_user_menu.html
+++ b/profapp/templates/_ruslan/partials/_user_menu.html
@@ -94,31 +94,32 @@
                             title="{{ _('Стрічкa читача') }}"
                             ng-class="{'selected': selected_user_menu == 'list_reader'}"><i
                             class="fa fa-newspaper-o"></i><span>{{ _('Стрічкa читача') }}</span></a></li>
+                    <!-- @formatter:off  -->
                     <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %} href="{{ url_messenger }}"
-                                                                                           title="{{ _('Всі повідомлення') }}"
-                                                                                           class="pr"
-                                                                                           ng-class="{'selected': selected_user_menu == 'messages'}"><i
-                            class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span>
-                        <div
-                                ng-if="unread_message_count || unread_notification_count || contact_request_count"
-                                class="pa unread_messages_and_notifications_count">{{ unread_message_count +
-                            unread_notification_count + contact_request_count}}
-                        </div>
-                    </a></li>
+                        title="{{ _('Всі повідомлення') }}"
+                        class="pr" ng-class="{'selected': selected_user_menu == 'messages'}"><i
+                        class="fa fa-envelope-o"></i><span>{{ _('Всі повідомлення') }}</span><div
+                        ng-if="unread_message_count || unread_notification_count || contact_request_count"
+                        class="pa unread_messages_and_notifications_count">{{ unread_message_count +
+                        unread_notification_count + contact_request_count}}</div></a></li>
+                    <!-- @formatter:on  -->
                     <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %}
                             href="{{ url_company_companies() }}"
                             title="{{ _('Компанії') }}"
                             ng-class="{'selected': selected_user_menu == 'companies'}"><i
                             class="fa fa-building-o"></i><span>{{ _('Компанії') }}</span></a></li>
                     <li class="dropdown" ng-if="user"><a {% endraw %}{{ tbvm() }}{% raw %} href=""
-                            ng-click="open_filemanager()" title="{{ _('Менеджер файлів') }}"
-                            ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
+                                                                                           ng-click="open_filemanager()"
+                                                                                           title="{{ _('Менеджер файлів') }}"
+                                                                                           ng-class="{'selected': selected_user_menu == 'file_manager'}"><i
                             class="fa fa-folder-open-o"></i><span>{{ _('Менеджер файлів') }}</span></a></li>
                     <li class="dropdown"><a {% endraw %}{{ tbvm() }}{% raw %} href="{{ url_general_help() }}"
-                            title="{{ _('Contact us') }}" ng-class="{'selected': selected_user_menu == 'contact_us'}"><i
+                                                                              title="{{ _('Contact us') }}"
+                                                                              ng-class="{'selected': selected_user_menu == 'contact_us'}"><i
                             class="fa fa-question-circle"></i><span>{{ _('Contact us') }}</span></a></li>
                     <li class="dropdown"><a {% endraw %}{{ tbvm() }}{% raw %} href="{{ url_tutorial() }}"
-                            title="{{ _('tutorial') }}" ng-class="{'selected': selected_user_menu == 'tutorial'}"><i
+                                                                              title="{{ _('tutorial') }}"
+                                                                              ng-class="{'selected': selected_user_menu == 'tutorial'}"><i
                             class="fa fa-file-video-o"></i><span>{{ _('Tutorial') }}</span></a></li>
 
                     <li class="dropdown"><a class="dropbtn" title="{{ _('Language') }}"><i
