--- a/profapp/templates/front/bootstrap/article_details.html
+++ b/profapp/templates/front/bootstrap/article_details.html
@@ -10,7 +10,7 @@
     <div class="article article-details {% if article['illustration']['selected_by_user']['type'] != 'none' %}article-with-illustration{% endif %}">
         <div class="article-division-and-tags pr">
             <div class="article-division nw">
-                <a href="{{ url_for('front.division', division_name=article['division']['name']) }}">{{ article['division']['name']|safe }}</a>
+                <a href="{{ url_for('front.division', division_name=article['portal_division']['name']) }}">{{ article['portal_division']['name']|safe }}</a>
             </div>
             <div class="tags-at-right nw">
                 {% for tag in article.tags %}
@@ -41,7 +41,7 @@
                     href="{{ url_for('front.company_page', member_company_name = article['company']['name'], member_company_id = article['company']['id']) }}">{{ article['company']['name']|safe }}</a>
             </div>
             <div class="article-date nw">
-                {{ frontmacros.article_date(article.division.portal_division_type_id, article) }}
+                {{ frontmacros.article_date(article.portal_division.portal_division_type_id, article) }}
             </div>
         </div>
 
