--- a/profapp/templates/front/bootstrap/article_short.html
+++ b/profapp/templates/front/bootstrap/article_short.html
@@ -1,7 +1,7 @@
 <div class="article article-short {% if article['illustration']['selected_by_user']['type'] != 'none' %}with-illustration{% endif %}">
     <div class="division-and-tags pr">
         <div class="division nw">
-            <a href="{{ url_for('front.division', division_name=article['division']['name']) }}">{{ article['division']['name']|safe }}</a>
+            <a href="{{ url_for('front.division', division_name=article['portal_division']['name']) }}">{{ article['portal_division']['name']|safe }}</a>
         </div>
         <div class="tags-at-right nw">
             {% if article.tags|length %}{% set tag = article.tags[0] %}
@@ -24,7 +24,7 @@
             <i class="fa fa-building-o"></i> <a href="{{ url_for('front.company_page', member_company_name = article['company']['name'], member_company_id = article['company']['id']) }}">{{ article['company']['name']|safe }}</a>
         </div>
         <div class="article-date nw">
-            {{ frontmacros.article_date(article.division.portal_division_type_id, article) }}
+            {{ frontmacros.article_date(article.portal_division.portal_division_type_id, article) }}
         </div>
     </div>
 
