--- a/profapp/static/css/style.css
+++ b/profapp/static/css/style.css
@@ -713,21 +713,21 @@ body {
 .news-details {
   margin-bottom: 50px;
 }
-/*--- VALIDATION ---*/
-.pr-validation-error,
-.pr-validation-error:focus {
-  border-color: #C70000;
-  box-shadow: 0 2px 5px 0 rgba(255, 0, 0, 0.75), 0 2px 10px 0 rgba(255, 0, 0, 0.12);
+.pr-validation-notice,
+.pr-validation-notice:focus {
+  border-color: #55ff55;
+  box-shadow: 0 2px 5px 0 rgba(0, 255, 0, 0.75), 0 2px 10px 0 rgba(0, 255, 0, 0.12);
 }
+/*--- VALIDATION ---*/
 .pr-validation-warning,
 .pr-validation-warning:focus {
   border-color: #ffff00;
   box-shadow: 0 2px 5px 0 rgba(150, 150, 0, 0.75), 0 2px 10px 0 rgba(150, 150, 0, 0.12);
 }
-.pr-validation-notice,
-.pr-validation-notice:focus {
+.pr-validation-error,
+.pr-validation-error:focus {
   border-color: #C70000;
-  box-shadow: 0 2px 5px 0 rgba(0, 255, 0, 0.75), 0 2px 10px 0 rgba(0, 255, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(255, 0, 0, 0.75), 0 2px 10px 0 rgba(255, 0, 0, 0.12);
 }
 .error-input {
   color: #CA2027;
@@ -874,7 +874,6 @@ body {
   margin-top: 12px;
 }
 .flash-message {
-  transition: bottom 5s cubic-bezier(0.19, 1.61, 0.58, -0.5);
   cursor: pointer;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   z-index: 100;
