--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -840,21 +840,22 @@ body {
   margin-bottom: 50px;
 }
 
-/*--- VALIDATION ---*/
-.pr-validation-error, .pr-validation-error:focus {
-  border-color: @color-red-btn;
-  box-shadow: 0 2px 5px 0 rgba(255, 0, 0, 0.75), 0 2px 10px 0 rgba(255, 0, 0, 0.12);
+.pr-validation-notice, .pr-validation-notice:focus {
+  border-color: #55ff55;
+  box-shadow: 0 2px 5px 0 rgba(0, 255, 0, 0.75), 0 2px 10px 0 rgba(0, 255, 0, 0.12);
 }
 
+/*--- VALIDATION ---*/
 .pr-validation-warning, .pr-validation-warning:focus {
   border-color: #ffff00;
   box-shadow: 0 2px 5px 0 rgba(150, 150, 0, 0.75), 0 2px 10px 0 rgba(150, 150, 0, 0.12);
 }
 
-.pr-validation-notice, .pr-validation-notice:focus {
+.pr-validation-error, .pr-validation-error:focus {
   border-color: @color-red-btn;
-  box-shadow: 0 2px 5px 0 rgba(0, 255, 0, 0.75), 0 2px 10px 0 rgba(0, 255, 0, 0.12);
+  box-shadow: 0 2px 5px 0 rgba(255, 0, 0, 0.75), 0 2px 10px 0 rgba(255, 0, 0, 0.12);
 }
+
 
 .error-input {
   color: @color-red-hover;
@@ -1024,7 +1025,7 @@ body {
 }
 
 .flash-message {
-  transition: bottom 5s cubic-bezier(.19, 1.61, .58, -0.5);
+  //transition: bottom 5s cubic-bezier(.19, 1.61, .58, -0.5);
   cursor: pointer;
   box-shadow: @shadow;
   z-index: 100;
