--- a/profapp/templates/front/bootstrap/_common/block_head.html
+++ b/profapp/templates/front/bootstrap/_common/block_head.html
@@ -3,7 +3,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <link rel="shortcut icon"
-      href="{{ fileUrl(portal.favicon_file_id, if_no_file=static_address('favicon.ico')) }}" type="image/x-icon"/>
+      href="{{ portal.favicon.url }}" type="image/x-icon"/>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
