--- a/profapp/templates/portal/portal_edit.html
+++ b/profapp/templates/portal/portal_edit.html
@@ -12,6 +12,26 @@
         {% include 'company/company_base_angular.html' %}
     {% endblock company_base %}
 
+    {% raw %}
+    <script type="text/ng-template" id="portal_edit_division_decription.html">
+        <div>
+            <div class="modal-header">
+                <h3 class="modal-title">{{ _('set division meta description') }}</h3>
+            </div>
+
+            <div class="modal-body">
+                <textarea class="w100 h10em" ng-model="description"></textarea>
+            </div>
+
+            <div class="modal-footer">
+                <button class="btn btn-primary" type="button" ng-click="set()">{{ _('Set') }}
+                </button>
+                <button class="btn btn-warning" type="button" ng-click="cancel()">{{ _('Cancel') }}</button>
+            </div>
+        </div>
+    </script>
+    {% endraw %}
+
     <script>
         module.controller('PortalDivisionController', function ($scope) {
 
@@ -25,6 +45,25 @@
             });
         });
 
+        module.controller('PortalDivisionDescriptionDialogControler', function ($scope, $uibModalInstance, description) {
+
+            $scope.$$translate = {{ translates('PortalDivisionDescriptionDialogControler')|safe }};
+
+            {% raw %}
+
+            $scope.description = description;
+
+            $scope.set = function () {
+                $uibModalInstance.close($scope.description);
+            }
+
+            $scope.cancel = $uibModalInstance.dismiss;
+
+
+            {% endraw %}
+
+        });
+
         module.controller('portal_edit', ['$scope', '$uibModal', function ($scope, $uibModal) {
             $scope.$$translate = {{ translates('portal_edit')|safe }};
 
@@ -33,6 +72,44 @@
 
 
             $scope.url_after_save = {{ raw_url_for('company.profile')|safe }};
+
+            $scope.changeDescription = function (division) {
+                var modalInstance = $uibModal.open({
+                    templateUrl: 'portal_edit_division_decription.html',
+                    controller: 'PortalDivisionDescriptionDialogControler',
+                    resolve: resolveDictForAngularController({
+                        description: division.description
+                    })
+                });
+                modalInstance.result.then(function (description) {
+                    division.description = description;
+                });
+            };
+
+            $scope.openForFavIcoFile = function (set_none) {
+                $('.favico-select-file-upload').click();
+            };
+
+
+            $scope.selectFiveIcoFile = function () {
+                var the_file = (event.target.files && event.target.files.length) ? event.target.files[0] : false;
+                $(this).val('');
+                if (the_file) {
+                    var fr = new FileReader();
+                    fr.onload = function (e) {
+                        $scope.data.portal['favicon'] = {
+                            'mime': the_file.type,
+                            'name': the_file.name,
+                            'content': fr.result
+                        }
+                    }
+
+                    fr.onerror = function (e) {
+                        add_message('File loading error', 'warning');
+                    };
+                    fr.readAsDataURL(the_file);
+                }
+            };
 
             $scope.afterSave = function (resp) {
                 if (!$scope.portal_id) {
@@ -50,7 +127,8 @@
                             _.map(['index', 'news', 'events', 'catalog', 'company_subportal'], function (t) {
                                 return {
                                     'id': randomHash(), 'portal_division_type_id': t,
-                                    'name': $scope._('new portal division ' + t)
+                                    'description': '',
+                                    'title': $scope._('new portal division ' + t)
                                 };
                             });
 
@@ -66,7 +144,7 @@
                 $scope.data.portal.divisions.push({
                     'id': randomHash(),
                     portal_division_type_id: 'news',
-                    name: '',
+                    title: '',
                     publication_count: 0
                 });
             };
@@ -116,7 +194,8 @@
                  ng-model="data">
                 <div ng-if="data_state == 'loading' || data_state == 'saving'" class="dimmed"></div>
                 <div ng-if="data_state == 'loading' || data_state == 'saving'" class="dimmed-message">
-                    <p><i class="fa fa-spinner fa-spin"></i>&nbsp;&nbsp;&nbsp;{{ _(data_state + ' portal data...') }}</p>
+                    <p><i class="fa fa-spinner fa-spin"></i>&nbsp;&nbsp;&nbsp;{{ _(data_state + ' portal data...') }}
+                    </p>
                 </div>
                 <div class="row">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
@@ -128,8 +207,16 @@
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12 image-company-profile create-img">
                         <div>
-                            <div style="width: 400px; height: 300px; position: relative;"
+
+                            <label class="pal ml1em">{{ ::_('Pls select logo') }}</label>
+                            <div style="width: 400px; height: 250px; position: relative;"
                                  pr-crop="data.portal.logo"></div>
+
+                            <br/><br/><br/><br/>
+                            <label class="pal ml1em">{{ ::_('Pls select favicon') }}</label>
+                            <div style="width: 400px; height: 150px; position: relative;"
+                                 pr-crop="data.portal.favicon"></div>
+                            <br/><br/>
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -183,18 +270,6 @@
                                 ></select>
 
                             </div>
-                            <div class="disabled">
-                                <label>{{ ::_('Favicon') }}</label>
-                                <div class="form-control border-none oh nowrap"><label><input disabled
-                                                                                              ng-value="'profi'"
-                                                                                              ng-model="data.portal.favicon_from"
-                                                                                              type="radio"> {{
-                                    ::_('Profi fav') }}</label>&nbsp;&nbsp;
-                                    <label><input disabled ng-value="'logo'" ng-model="data.portal.favicon_from"
-                                                  type="radio"> {{ ::_('Logo fav') }}</label>&nbsp;&nbsp;
-                                    <label><input disabled ng-value="'uploaded'" ng-model="data.portal.favicon_from"
-                                                  type="radio"> {{ ::_('Upload fav') }}</label></div>
-                            </div>
 
                             <div ng-repeat="socnet in ['facebook', 'google', 'tweeter', 'linkedin']">
                                 <label>{{ ::_('Url ' + socnet) }}</label>
@@ -214,7 +289,7 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 p025em">
-                        <label class="form-control border-none pull-right">{{ ::_('Division name') }}</label>
+                        <label class="form-control border-none pull-right">{{ ::_('Division title') }}</label>
                     </div>
                     <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em">
                         <label class="form-control border-none pull-right w15em">{{ ::_('Division type') }}</label>
@@ -234,14 +309,14 @@
                          ng-controller="PortalDivisionController"
                          ng-repeat="(division_index, division) in data.portal.divisions">
                         <div ng-class="{'disabled': division['remove_this_existing_division']}">
-                            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4 p025em tar">
-                        <span style="cursor: row-resize"
-                              class="fa fa-arrows-v form-control w2em border-none di"></span>
-                                <input class="form-control w20em di"
+                            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em tar">
+                                <span style="cursor: row-resize"
+                                      class="fa fa-arrows-v form-control w2em border-none di"></span>
+                                <input class="form-control w15em di"
                                        ng-disabled="division['remove_this_existing_division']"
-                                       pr-validation-answer="data_validation:divisions[division.id].name"
-                                       placeholder="{{ _('Division name placeholder') }}"
-                                       ng-model="division.name">
+                                       pr-validation-answer="data_validation:divisions[division.id].title"
+                                       placeholder="{{ _('Division title placeholder') }}"
+                                       ng-model="division.title">
                             </div>
 
                             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 p025em">
@@ -277,7 +352,14 @@
                                     </select>
                                 </div>
                             </div>
+                            <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1 p025em">
+                                <button ng-disabled="division['remove_this_existing_division']"
+                                        ng-click="changeDescription(division)"
+                                        class="nowrap btn">{{ ::_('Meta description') }}
+                                </button>
+                            </div>
                         </div>
+
                         <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 p025em">
                             <button ng-click="removeDivision($index)"
                                     pr-validation-answer="data_validation:divisions[division.id].actions"
