--- a/profapp/templates/front/bootstrap/_common/block_head.html
+++ b/profapp/templates/front/bootstrap/_common/block_head.html
@@ -2,8 +2,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="shortcut icon"
-      href="{{ portal.favicon.url }}" type="image/x-icon"/>
+<link rel="shortcut icon" href="{{ portal.favicon.url }}" type="image/x-icon"/>
 
 <script src="https://code.jquery.com/jquery-2.2.4.min.js"
         integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
