--- a/profapp/templates/front/bootstrap/search.html
+++ b/profapp/templates/front/bootstrap/search.html
@@ -2,6 +2,8 @@
 {% block title -%}
     {{ _('search - %(portal_name)s', {'portal_name': portal.name}) }}
 {%- endblock %}
+{% block description -%}{%- endblock %}
+{% block keywords -%}{%- endblock %}
 
 {% block center_content %}
     {% import '_common/macros.html' as frontmacros %}
