--- a/profapp/templates/_ruslan/_index_layout.html
+++ b/profapp/templates/_ruslan/_index_layout.html
@@ -140,9 +140,7 @@
     <div class="container-fluid widewrapper">
         {% include 'flashed-messages.html' %}
 
-        {% block portal_content %}
-
-        {% endblock portal_content %}
+        {% block portal_content %}{% endblock portal_content %}
     </div>
 
 
