--- a/profapp/templates/front/bootstrap/_common/html.html
+++ b/profapp/templates/front/bootstrap/_common/html.html
@@ -9,9 +9,11 @@
 
     {% block og -%}
     <meta property="og:site_name" content="{% block og_name %}{{ portal.name }}{% endblock %}"/>
-    <meta property="og:title" content="{% block og_title %}{{ self.title()|trim }}{% endblock %}"/>
-    <meta property="og:description" content="{% block og_description %}{{ self.description()|trim }}{% endblock %}"/>
-    <meta property="og:image" content="{% block og_img_url %}{{ portal.logo.url }}{% endblock %}"/>
+    <meta property="og:title" content="{% block og_title %}{{ seo.title|trim }}{% endblock %}"/>
+    <meta property="og:description" content="{% block og_description %}{{ seo.description|trim }}{% endblock %}"/>
+    <meta property="og:image:width" content="300"/>
+    <meta property="og:image:height" content="300"/>
+    <meta property="og:image" content="http:{% block og_img_url %}{{ seo.image_url if seo.image_url else portal.logo.url }}{% endblock %}"/>
     {%- endblock %}
 
     {% block head %}{% include 'block_head.html' %}{% endblock head %}
