--- a/profapp/static/css/style.less
+++ b/profapp/static/css/style.less
@@ -148,8 +148,9 @@ body {
   }
 
   img.menu-company-logo {
-    height: 41px;
-    margin-right: 5px;
+    height: 2.7em;
+    width: 10em;
+    margin: 2px 5px;
   }
 
   a {
