sn icons in bootstrap front

--- a/profapp/templates/portal/portal_edit.html
+++ b/profapp/templates/portal/portal_edit.html
@@ -286,7 +286,7 @@
 
                             </div>
 
-                            <div ng-repeat="socnet in ['facebook', 'google', 'tweeter', 'linkedin']">
+                            <div ng-repeat="socnet in ['facebook', 'google', 'twitter', 'linkedin']">
                                 <label>{{ ::_('Url ' + socnet) }}</label>
                                 <input type="text" class="form-control border-radius"
                                        apr-validation-answer="data_validation:name"
