--- a/profapp/templates/portal/plans_edit.html
+++ b/profapp/templates/portal/plans_edit.html
@@ -226,7 +226,7 @@
 
     <div class="controller-portal-plans" ng-controller="portal_plans" ng-cloak>
         <form name="formPortalPlans">
-            <div class="container pr" af af-after-save="afterSave" af-amid-load="amidLoad" af-watch="data.portal"
+            <div class="container pr" af af-after-save="afterSave" af-amid-load="amidLoad" af-watch="data.plans"
                  ng-model="data">
                 <div ng-if="data_state == 'loading' || data_state == 'saving'" class="dimmed"></div>
                 <div ng-if="data_state == 'loading' || data_state == 'saving'" class="dimmed-message">
