--- a/profapp/templates/front/wood/division_articles.html
+++ b/profapp/templates/front/wood/division_articles.html
@@ -40,5 +40,5 @@
             </aside>
         </div>
     </div>
-    {# % include '_common/block_pager.html' % #}
+    {% include 'pagination.html' %}
 {% endblock %}
